# ASSET-PRO

./: README.md
assetpro/: README.md  assets.json  pyproject.toml
assetpro/asset_pro/: __init__.py  main.py  manager.py  models.py  web.py
assetpro/tests/: test_asset_manager.py  test_web_actions.py  test_web_app.py
