[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-pro"
version = "0.1.0"
description = "A simple Python-based asset management starter project"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
asset-pro = "asset_pro.main:main"
